tests/paczka1/fuzzy1/26286346.err
Error in line 2: 0RNsO S125 26,3
Error in line 11: VZlxQEvP S59 84,7
Error in line 24: VZlxQEvP S559 76,8
Error in line 26: 93Q S59 69,66
Error in line 29: e4hNWgy2 S59 35,5
Error in line 32: 93Q S59 196,13
Error in line 30: 0RNsO S87 33,5
